tests/scan/fixtures/validation/negative/clean_go_generate/main.go
package main

//go:generate go run ./cmd/codegen -input ./api/swagger.yaml -output ./api/generated.go

func main() {}
